Fix menu (z-index and navigation-menu id).

--- a/assets/sass/components/_Menu.scss
+++ b/assets/sass/components/_Menu.scss
@@ -8,7 +8,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
-  z-index: 120;
+  z-index: 20;
   // Flexbox
   display: flex;
   justify-content: space-between;
